--- a/document/book.bib
+++ b/document/book.bib
@@ -4278,4 +4278,204 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/6ZUPLJ8L/Brinkman and Huron - 2018 - The leading sixth scale degree A test of Day-O’Co.pdf}
 }
 
+@article{huronVirtuousVexatiousAge2013,
+  title = {On the {{Virtuous}} and the {{Vexatious}} in an {{Age}} of {{Big Data}}},
+  volume = {31},
+  issn = {07307829, 15338312},
+  doi = {10.1525/mp.2013.31.1.4},
+  language = {en},
+  number = {1},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Huron, David},
+  month = sep,
+  year = {2013},
+  pages = {4-9},
+  file = {/Users/davidjohnbaker/Zotero/storage/CB4VT8BQ/Huron - 2013 - On the Virtuous and the Vexatious in an Age of Big.pdf}
+}
+
+@article{frielerTellingStoryDramaturgy2016,
+  title = {"{{Telling}} a {{Story}}." {{On}} the {{Dramaturgy}} of {{Monophonic Jazz Solos}}},
+  volume = {11},
+  issn = {1559-5749},
+  doi = {10.18061/emr.v11i1.4959},
+  abstract = {The metaphor of storytelling is widespread among jazz performers and jazz researchers. However, little is known about the precise meaning of this metaphor on an analytical level. The present paper attempts to shed light on the connected semantic field of the metaphor and relate it to its musical basis by investigating time courses of selected musical elements and features in monophonic jazz improvisations. Three explorative studies are carried out using transcriptions of 299 monophonic jazz solos from the Weimar Jazz Database. The first study inspects overall trends using fits of quadratic polynomials onto loudness and pitch curves. The second study does the same using selected features related to intensity, tension and variability over the course of phrases in the solos. The third study examines the distribution of the relative positions of various improvisational ideas in a subset of 116 solos. Results show that certain trends can be found, but not to a large extent. Significant trends most often display arch-shaped curves as expected from classical dramatic models. This is also in accordance with the fact that expressive improvisational ideas are more often found in the last part of a solo, while more relaxed ideas occur earlier. All in all, jazz improvisations show a wide range of variation and no single overarching dramatic model could be identified.},
+  language = {en},
+  number = {1},
+  journal = {Empirical Musicology Review},
+  author = {Frieler, Klaus and Pfleiderer, Martin and Abe\ss{}er, Jakob and Zaddach, Wolf-Georg},
+  month = jul,
+  year = {2016},
+  pages = {68},
+  file = {/Users/davidjohnbaker/Zotero/storage/PP55UUWK/Frieler et al. - 2016 - Telling a Story. On the Dramaturgy of Monophonic.pdf}
+}
+
+@article{sturmMachineLearningResearch2019,
+  title = {Machine Learning Research That Matters for Music Creation: {{A}} Case Study},
+  volume = {48},
+  issn = {0929-8215, 1744-5027},
+  shorttitle = {Machine Learning Research That Matters for Music Creation},
+  doi = {10.1080/09298215.2018.1515233},
+  abstract = {Research applying machine learning to music modelling and generation typically proposes model architectures, training methods and datasets, and gauges system performance using quantitative measures like sequence likelihoods and/or qualitative listening tests. Rarely does such work explicitly question and analyse its usefulness for and impact on real-world practitioners, and then build on those outcomes to inform the development and application of machine learning. This article attempts to do these things for machine learning applied to music creation. Together with practitioners, we develop and use several applications of machine learning for music creation, and present a public concert of the results. We reflect on the entire experience to arrive at several ways of advancing these and similar applications of machine learning to music creation.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Sturm, Bob L. and {Ben-Tal}, Oded and Monaghan, \'Una and Collins, Nick and Herremans, Dorien and Chew, Elaine and Hadjeres, Ga\"etan and Deruty, Emmanuel and Pachet, Fran{\c c}ois},
+  month = jan,
+  year = {2019},
+  pages = {36-55},
+  file = {/Users/davidjohnbaker/Zotero/storage/SZI65LIS/Sturm et al. - 2019 - Machine learning research that matters for music c.pdf}
+}
+
+@article{sturmTakingModelsBack2017,
+  title = {Taking the {{Models}} Back to {{Music Practice}}: {{Evaluating Generative Transcription Models}} Built Using {{Deep Learning}}},
+  volume = {2},
+  issn = {23997656},
+  shorttitle = {Taking the {{Models}} Back to {{Music Practice}}},
+  doi = {10.5920/JCMS.2017.09},
+  abstract = {We extend our evaluation of generative models of music transcriptions that were first presented in Sturm, Santos, Ben-Tal, and Korshunova (2016). We evaluate the models in five different ways: 1) at the population level, comparing statistics of 30,000 generated transcriptions with those of over 23,000 training transcriptions; 2) at the practice level, examining the ways in which specific generated transcriptions are successful as music compositions; 3) as a ``nefarious tester'', seeking the music knowledge limits of the models; 4) in the context of assisted music composition, using the models to create music within the conventions of the training data; and finally, 5) taking the models to real-world music practitioners. Our work attempts to demonstrate new approaches to evaluating the application of machine learning methods to modelling and making music, and the importance of taking the results back to the realm of music practice to judge their usefulness. Our datasets and software are open and available at https://github.com/IraKorshunova/folk-rnn.},
+  language = {en},
+  number = {1},
+  journal = {Journal of Creative Music Systems},
+  author = {Sturm, Bob L. and {Ben-Tal}, Oded},
+  month = sep,
+  year = {2017},
+  file = {/Users/davidjohnbaker/Zotero/storage/TL9GKJV4/Sturm and Ben-Tal - 2017 - Taking the Models back to Music Practice Evaluati.pdf}
+}
+
+@article{baayenMixedeffectsModelingCrossed2008,
+  title = {Mixed-Effects Modeling with Crossed Random Effects for Subjects and Items},
+  volume = {59},
+  issn = {0749596X},
+  doi = {10.1016/j.jml.2007.12.005},
+  abstract = {This paper provides an introduction to mixed-effects models for the analysis of repeated measurement data with subjects and items as crossed random effects. A worked-out example of how to use recent software for mixed-effects modeling is provided. Simulation studies illustrate the advantages offered by mixed-effects analyses compared to traditional analyses based on quasi-F tests, by-subjects analyses, combined by-subjects and by-items analyses, and random regression. Applications and possibilities across a range of domains of inquiry are discussed.},
+  language = {en},
+  number = {4},
+  journal = {Journal of Memory and Language},
+  author = {Baayen, R.H. and Davidson, D.J. and Bates, D.M.},
+  month = nov,
+  year = {2008},
+  pages = {390-412},
+  file = {/Users/davidjohnbaker/Zotero/storage/CNG57JDB/Baayen et al. - 2008 - Mixed-effects modeling with crossed random effects.pdf}
+}
+
+@article{wolfGradesReflectDevelopment2014,
+  title = {Do Grades Reflect the Development of Excellence in Music Students? {{The}} Prognostic Validity of Entrance Exams at Universities of Music},
+  volume = {18},
+  issn = {1029-8649, 2045-4147},
+  shorttitle = {Do Grades Reflect the Development of Excellence in Music Students?},
+  doi = {10.1177/1029864914530394},
+  abstract = {For successful admission to universities of music, prospective students have to pass entrance exams which assess the quality of their music-making and, in some instances, their abilities in music theory and aural training. However, only very little is known about the validity of such grades and the skill development of expectant professional musicians. For the first time, the present study analyzes the long-term development of grades of students in a bachelor degree program (N = 63) over a period of 3 years. As the grades were neither interval-scaled nor normally distributed, a logistic regression analysis was calculated to quantify the predictability of final grades in the main instrument and music theory based on the respective entrance exam grades. The prognostic validity was low for grades in both the main instrument and music theory/aural training (Nagelkerke R2 = .08 and .01). This result can be mainly attributed to two explanations: First, university grades are often inflated and subject to ceiling effects. Second, the curricula in music theory contain such variety that it is impossible to define what all students across the board learn. In order to better define expertise skill development in students, we suggest initiating regular competency-based assessments for professional musicians at a pre-collegiate and collegiate level.},
+  language = {en},
+  number = {2},
+  journal = {Musicae Scientiae},
+  author = {Wolf, Anna and Kopiez, Reinhard},
+  month = jun,
+  year = {2014},
+  pages = {232-248},
+  file = {/Users/davidjohnbaker/Zotero/storage/F225M3F7/Wolf and Kopiez - 2014 - Do grades reflect the development of excellence in.pdf}
+}
+
+@book{bregmanAuditorySceneAnalysis2006,
+  address = {Cambridge, Mass.},
+  edition = {2. paperback ed., repr},
+  series = {A {{Bradford}} Book},
+  title = {Auditory Scene Analysis: The Perceptual Organization of Sound},
+  isbn = {978-0-262-52195-6},
+  shorttitle = {Auditory Scene Analysis},
+  language = {eng},
+  publisher = {{MIT Press}},
+  author = {Bregman, Albert S.},
+  year = {2006},
+  file = {/Users/davidjohnbaker/Zotero/storage/XFLX6TGS/Bregman - 2006 - Auditory scene analysis the perceptual organizati.pdf},
+  note = {OCLC: 550546350}
+}
+
+@article{deutschInternalRepresentationPitch1981,
+  title = {The {{Internal Representation}} of {{Pitch Sequences}} in {{Tonal Music}}},
+  volume = {88},
+  language = {en},
+  number = {6},
+  journal = {Psychological Review},
+  author = {Deutsch, Diana and Feroe, John},
+  year = {1981},
+  pages = {503-522},
+  file = {/Users/davidjohnbaker/Zotero/storage/4Q9KLZY8/Deutsch and Feroe - The Internal Representation of Pitch Sequences in .pdf}
+}
+
+@article{eerolaPerceivedComplexityWestern2006,
+  title = {Perceived Complexity of Western and {{African}} Folk Melodies by Western and {{African}} Listeners},
+  volume = {34},
+  issn = {0305-7356, 1741-3087},
+  doi = {10.1177/0305735606064842},
+  language = {en},
+  number = {3},
+  journal = {Psychology of Music},
+  author = {Eerola, Tuomas and Himberg, Tommi and Toiviainen, Petri and Louhivuori, Jukka},
+  month = jul,
+  year = {2006},
+  pages = {337-371},
+  file = {/Users/davidjohnbaker/Zotero/storage/IX46BP83/Eerola et al. - 2006 - Perceived complexity of western and African folk m.pdf}
+}
+
+@article{deleeuwJsPsychJavaScriptLibrary2015,
+  title = {{{jsPsych}}: {{A JavaScript}} Library for Creating Behavioral Experiments in a {{Web}} Browser},
+  volume = {47},
+  issn = {1554-3528},
+  shorttitle = {{{jsPsych}}},
+  doi = {10.3758/s13428-014-0458-y},
+  abstract = {Online experiments are growing in popularity, and the increasing sophistication of Web technology has made it possible to run complex behavioral experiments online using only a Web browser. Unlike with offline laboratory experiments, however, few tools exist to aid in the development of browser-based experiments. This makes the process of creating an experiment slow and challenging, particularly for researchers who lack a Web development background. This article introduces jsPsych, a JavaScript library for the development of Web-based experiments. jsPsych formalizes a way of describing experiments that is much simpler than writing the entire experiment from scratch. jsPsych then executes these descriptions automatically, handling the flow from one task to another. The jsPsych library is opensource and designed to be expanded by the research community. The project is available online at www.jspsych.org.},
+  language = {en},
+  number = {1},
+  journal = {Behavior Research Methods},
+  author = {{de Leeuw}, Joshua R.},
+  month = mar,
+  year = {2015},
+  pages = {1-12},
+  file = {/Users/davidjohnbaker/Zotero/storage/RNRRGRZI/de Leeuw - 2015 - jsPsych A JavaScript library for creating behavio.pdf}
+}
+
+@article{rentfrowReMiEveryday2003,
+  title = {The Do Re Mi's of Everyday Life: {{The}} Structure and Personality Correlates of Music Preferences.},
+  volume = {84},
+  issn = {1939-1315, 0022-3514},
+  shorttitle = {The Do Re Mi's of Everyday Life},
+  doi = {10.1037/0022-3514.84.6.1236},
+  language = {en},
+  number = {6},
+  journal = {Journal of Personality and Social Psychology},
+  author = {Rentfrow, Peter J. and Gosling, Samuel D.},
+  year = {2003},
+  pages = {1236-1256},
+  file = {/Users/davidjohnbaker/Zotero/storage/VW9596AP/Rentfrow and Gosling - 2003 - The do re mi's of everyday life The structure and.pdf}
+}
+
+@article{halpernDifferencesAuditoryImagery2015,
+  title = {Differences in Auditory Imagery Self-Report Predict Neural and Behavioral Outcomes.},
+  volume = {25},
+  issn = {2162-1535, 0275-3987},
+  doi = {10.1037/pmu0000081},
+  abstract = {Mental imagery abilities vary among individuals, as shown both by objective measures and by selfreport. Few imagery studies consider auditory imagery, however. The Bucknell Auditory Imagery Scale is a short self-report measure encompassing both Vividness and Control subscales for musical, verbal, and environmental sounds. It has high internal reliability, no relation to social desirability, and only a modest relation to musical training. High scores on Vividness predict fewer source memory errors in distinguishing heard from imagined tunes on a recognition test, and better performance on pitch imitation tasks. Furthermore, higher scores are related to hemodynamic response and gray matter volume in several brain areas that are known to be involved in auditory imagery. Even though self-report measures encompass both cognitive and metacognitive aspects, they are useful tools in accounting for individual differences in high-level cognitive skills.},
+  language = {en},
+  number = {1},
+  journal = {Psychomusicology: Music, Mind, and Brain},
+  author = {Halpern, Andrea R.},
+  year = {2015},
+  pages = {37-47},
+  file = {/Users/davidjohnbaker/Zotero/storage/7GD5LCHC/Halpern - 2015 - Differences in auditory imagery self-report predic.pdf}
+}
+
+@article{batesFittingLinearMixedEffects2015,
+  title = {Fitting {{Linear Mixed}}-{{Effects Models Using}} {\textbf{Lme4}}},
+  volume = {67},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v067.i01},
+  abstract = {Maximum likelihood or restricted maximum likelihood (REML) estimates of the parameters in linear mixed-effects models can be determined using the lmer function in the lme4 package for R. As for most model-fitting functions in R, the model is described in an lmer call by a formula, in this case including both fixed- and random-effects terms. The formula and data together determine a numerical representation of the model from which the profiled deviance or the profiled REML criterion can be evaluated as a function of some of the model parameters. The appropriate criterion is optimized, using one of the constrained optimization functions in R, to provide the parameter estimates. We describe the structure of the model, the steps in evaluating the profiled deviance or REML criterion, and the structure of classes or types that represents such a model. Sufficient detail is included to allow specialization of these structures by users who wish to write functions to fit specialized linear mixed models, such as models incorporating pedigrees or smoothing splines, that are not easily expressible in the formula language used by lmer.},
+  language = {en},
+  number = {1},
+  journal = {Journal of Statistical Software},
+  author = {Bates, Douglas and M\"achler, Martin and Bolker, Ben and Walker, Steve},
+  year = {2015},
+  file = {/Users/davidjohnbaker/Zotero/storage/CSCREVG8/Bates et al. - 2015 - Fitting Linear Mixed-Effects Models Using blme4.pdf}
+}
+
 
